fix equation overflow

--- a/src/popup.css
+++ b/src/popup.css
@@ -53,6 +53,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  gap: 8px;
   padding: 16px;
   border-radius: 8px;
   z-index: 9999999;
@@ -123,14 +124,6 @@
   border-radius: 4px;
 }
 
-.equation-containerLATEX {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
-}
-
 .font-size-containerLATEX {
   display: flex;
   justify-content: center;
@@ -172,16 +165,25 @@
   color: var(--border-blueLATEX);
 }
 
-
-.equationLATEX {
-  font-size: 100px;
+.equation-wrapperLATEX {
   display: flex;
   justify-content: center;
   align-items: center;
   user-select: none;
-  padding: 4px 8px;
-  margin: 0;
-  overflow: overlay;
+  width: 100%;
+  height: 100%;
+}
+
+.scrollLATEX {
+  overflow: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.equationLATEX {
+  font-size: 100px;
+  display: inline-block;
+  min-width: max-content;
 }
 
 .footerLATEX {
